--- a/_posts/2015-08-09-Java集合框架.markdown
+++ b/_posts/2015-08-09-Java集合框架.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Jacob|Blog"
+title:  "Java Collection"
 date:   2015-08-09 11:21:44
 categories: java
 ---
@@ -9,7 +9,7 @@ categories: java
 
 ------
 
-Java集合是Java 提供的工具包，包含了常用的数据结构：集合、链表、队列、栈、数组、映射等。集合工具包的位置是java.util.*
+Java集合是Java 提供的工具包，包含了常用的数据结构：集合、链表、队列、栈、数组、映射等。集合工具包的位置是 `java.util.*`
 
 -------
 Java 集合主要可以划分为四个部分：**List**列表、**Set**集合、**Map**映射、工具类(Iterator迭代器、Enumerattion枚举类、Arrays和Collections)。
